@@ -1,12 +1,14 @@
 package br.edu.ifba.inf011.aval1.fm;
 
+import java.lang.reflect.InvocationTargetException;
+
 import br.edu.ifba.inf011.aval1.Produto;
 
 public abstract class ProdutoFactory {
 	
-	public static Produto novoProduto(TipoProduto tipo, String codigo, String nome) throws InstantiationException, IllegalAccessException, ClassNotFoundException {
+	public static Produto novoProduto(TipoProduto tipo, String codigo, String nome) throws InstantiationException, IllegalAccessException, ClassNotFoundException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 		ProdutoFactory factory = 
-				(ProdutoFactory) (Class.forName(tipo.getFactoryName()).newInstance());
+				(ProdutoFactory) Class.forName(tipo.getFactoryName()).getConstructor().newInstance();
 		return factory.createProduto(codigo, nome);
 	}
 
